versions/v3.6.0/doxygen/html/globals_func_z.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/globals_func_z.html
original_path: doxygen/html/globals_func_z.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all functions with links to the files they belong to:

### - z -

- zbus\_chan\_add\_obs() : [zbus.h](group__zbus__apis.md#gaddd8ce480bc29ead4442e529915cfbf6)
- zbus\_chan\_claim() : [zbus.h](group__zbus__apis.md#ga00bfb7db54594029f4d288bcf5b56b3a)
- zbus\_chan\_const\_msg() : [zbus.h](group__zbus__apis.md#gafee07c355df9ac86b85e601196b56a10)
- zbus\_chan\_finish() : [zbus.h](group__zbus__apis.md#ga74747affb345e68ce1d564c349409e59)
- zbus\_chan\_msg() : [zbus.h](group__zbus__apis.md#gaaf8b34113b7b993438bd42db64812572)
- zbus\_chan\_msg\_size() : [zbus.h](group__zbus__apis.md#ga8895a18b282ca2fe7528b4e5cf48e025)
- zbus\_chan\_name() : [zbus.h](group__zbus__apis.md#ga05a220636fc6bb58b97805e558b76d73)
- zbus\_chan\_notify() : [zbus.h](group__zbus__apis.md#ga6ec2f463801499e23a011fa4e68aa3e7)
- zbus\_chan\_pub() : [zbus.h](group__zbus__apis.md#gadfcaba65b397c1d8c31836ef3cf61244)
- zbus\_chan\_read() : [zbus.h](group__zbus__apis.md#ga8209721e0a295c84d112ba1a7171100e)
- zbus\_chan\_rm\_obs() : [zbus.h](group__zbus__apis.md#gaee11d7472a3f87156b8ef1dcfbe897c4)
- zbus\_chan\_user\_data() : [zbus.h](group__zbus__apis.md#gac0b0ed0356fca5a8b65a3332931a369a)
- zbus\_iterate\_over\_channels() : [zbus.h](group__zbus__apis.md#ga6dffd25f4eb368e773c2bd55f34a0e10)
- zbus\_iterate\_over\_channels\_with\_user\_data() : [zbus.h](group__zbus__apis.md#gab8df108b0238757ff631ec1e120fa2c3)
- zbus\_iterate\_over\_observers() : [zbus.h](group__zbus__apis.md#ga2fa50316993afc5807e9d707d664be14)
- zbus\_iterate\_over\_observers\_with\_user\_data() : [zbus.h](group__zbus__apis.md#ga2f4e39c500fed0a6bcfedb5dec3f797a)
- zbus\_obs\_attach\_to\_thread() : [zbus.h](group__zbus__apis.md#gabecf160e4d468d0275ad79e22fd0fb5b)
- zbus\_obs\_detach\_from\_thread() : [zbus.h](group__zbus__apis.md#ga493c125c31e44d5a222f0e9c6d01249e)
- zbus\_obs\_is\_chan\_notification\_masked() : [zbus.h](group__zbus__apis.md#ga41ae9799a52c2a7954500b0a3c78d19f)
- zbus\_obs\_is\_enabled() : [zbus.h](group__zbus__apis.md#ga9d1f5e1aecd8bd521d916944cece2b95)
- zbus\_obs\_name() : [zbus.h](group__zbus__apis.md#ga5bb33ec5b914e6cbc87fa70bf763ad15)
- zbus\_obs\_set\_chan\_notification\_mask() : [zbus.h](group__zbus__apis.md#ga9513264f912f54b60c4341642f578e5a)
- zbus\_obs\_set\_enable() : [zbus.h](group__zbus__apis.md#ga6b44a887c82cbceff3136bbd9e0aa91c)
- zbus\_sub\_wait() : [zbus.h](group__zbus__apis.md#ga84a65e276a01ef97eeb5c81b880da72b)
- zbus\_sub\_wait\_msg() : [zbus.h](group__zbus__apis.md#gaeffce45446509e488192a4e6442453fb)
- zdsp\_abs\_f16() : [basicmath\_f16.h](group__math__dsp__basic__abs.md#gaf178acd8862a2928a65e98f4fef1380b)
- zdsp\_abs\_f32() : [basicmath.h](group__math__dsp__basic__abs.md#ga5a5358fb90f726256f064757fbab1bcd)
- zdsp\_abs\_q15() : [basicmath.h](group__math__dsp__basic__abs.md#ga53ee6bbc05423703f6299fd60c8e1d44)
- zdsp\_abs\_q31() : [basicmath.h](group__math__dsp__basic__abs.md#ga74ccbbaf60257ca482fc96e1d40edeca)
- zdsp\_abs\_q7() : [basicmath.h](group__math__dsp__basic__abs.md#ga69c38809979de090a3458ec9b31f4cb4)
- zdsp\_add\_f16() : [basicmath\_f16.h](group__math__dsp__basic__add.md#ga3ad2849433440c2d1175cd6f18e6eade)
- zdsp\_add\_f32() : [basicmath.h](group__math__dsp__basic__add.md#gae890add140205717dcb4b1c39650b797)
- zdsp\_add\_q15() : [basicmath.h](group__math__dsp__basic__add.md#ga978af9251a9c8b8d62b47a921dcf9d38)
- zdsp\_add\_q31() : [basicmath.h](group__math__dsp__basic__add.md#gad2bbabc990f868b3ecfe270458e22657)
- zdsp\_add\_q7() : [basicmath.h](group__math__dsp__basic__add.md#gae5d919e8595e80216302953797fcf987)
- zdsp\_and\_u16() : [basicmath.h](group__math__dsp__basic__and.md#ga988879dc54666692130793f6ce26fd23)
- zdsp\_and\_u32() : [basicmath.h](group__math__dsp__basic__and.md#ga99019932e69574ca8aef86b4ace9c3b6)
- zdsp\_and\_u8() : [basicmath.h](group__math__dsp__basic__and.md#ga22c8c022d4f8cd9e34f1e1e47433d121)
- zdsp\_clip\_f16() : [basicmath\_f16.h](group__math__dsp__basic__clip.md#ga4edd7ba5b9c3791d7857a2c7d1541cab)
- zdsp\_clip\_f32() : [basicmath.h](group__math__dsp__basic__clip.md#gaa81f891d1946313161d1a2989aafe0e1)
- zdsp\_clip\_q15() : [basicmath.h](group__math__dsp__basic__clip.md#ga7c83f52241784bfdf81baf14581435b9)
- zdsp\_clip\_q31() : [basicmath.h](group__math__dsp__basic__clip.md#ga2a7483cb8150e3caee8fade382dc3ceb)
- zdsp\_clip\_q7() : [basicmath.h](group__math__dsp__basic__clip.md#ga4e368fccf4ec5f46e82127816ecfc22e)
- zdsp\_dot\_prod\_f16() : [basicmath\_f16.h](group__math__dsp__basic__dot.md#ga11af65d379fa201a04408544ddca8354)
- zdsp\_dot\_prod\_f32() : [basicmath.h](group__math__dsp__basic__dot.md#ga66932c50dc7e2b7207ad5c8218c110a6)
- zdsp\_dot\_prod\_q15() : [basicmath.h](group__math__dsp__basic__dot.md#ga5a76ac790b7d981b97143f7473587ccf)
- zdsp\_dot\_prod\_q31() : [basicmath.h](group__math__dsp__basic__dot.md#gaae752f1d9645d8c80fcdabc0f0b249f8)
- zdsp\_dot\_prod\_q7() : [basicmath.h](group__math__dsp__basic__dot.md#gaa6bdeed693734e5d1c7b93b58eaf9eeb)
- zdsp\_mult\_f16() : [basicmath\_f16.h](group__math__dsp__basic__mult.md#ga795bc69852005a0e547c3f2794c5397a)
- zdsp\_mult\_f32() : [basicmath.h](group__math__dsp__basic__mult.md#gac9513150fc602b6bab481faf36f81ca4)
- zdsp\_mult\_q15() : [basicmath.h](group__math__dsp__basic__mult.md#gaf8aa8d6e976c9ee5f4ac836506da3bc7)
- zdsp\_mult\_q31() : [basicmath.h](group__math__dsp__basic__mult.md#ga0e4e4ff5e33e792feecf811cb8e96d18)
- zdsp\_mult\_q7() : [basicmath.h](group__math__dsp__basic__mult.md#gae0792b036a40a19af1c25b3a6a23e988)
- zdsp\_negate\_f16() : [basicmath\_f16.h](group__math__dsp__basic__negate.md#ga7aacb425c3dfb2c5d8664a7cf4031c3b)
- zdsp\_negate\_f32() : [basicmath.h](group__math__dsp__basic__negate.md#gad8760ce77fcf2198f73813278fa15343)
- zdsp\_negate\_q15() : [basicmath.h](group__math__dsp__basic__negate.md#ga41dc3e0d8a0bd3654f74cbbd9038153d)
- zdsp\_negate\_q31() : [basicmath.h](group__math__dsp__basic__negate.md#ga08591323e804b4d7932c7bade4331705)
- zdsp\_negate\_q7() : [basicmath.h](group__math__dsp__basic__negate.md#ga578a3cee7cff2d818e41ec974066d55a)
- zdsp\_not\_u16() : [basicmath.h](group__math__dsp__basic__not.md#ga3bca20f3c626e1a64dd79d0e22a43bed)
- zdsp\_not\_u32() : [basicmath.h](group__math__dsp__basic__not.md#gafd6993acd6abeaa529dea84f3fd4d3a9)
- zdsp\_not\_u8() : [basicmath.h](group__math__dsp__basic__not.md#gaafd38edd648a03d328d51b5ca9097b5d)
- zdsp\_offset\_f16() : [basicmath\_f16.h](group__math__dsp__basic__offset.md#ga60d4ef0543308773e651a0f40b3b0fe1)
- zdsp\_offset\_f32() : [basicmath.h](group__math__dsp__basic__offset.md#ga1f14e702ad5dc6482fcdb4758ad862c3)
- zdsp\_offset\_q15() : [basicmath.h](group__math__dsp__basic__offset.md#ga1740996532090e41ce20913bb201023c)
- zdsp\_offset\_q31() : [basicmath.h](group__math__dsp__basic__offset.md#ga2b5958ec0fc8bb26662c41136ec46b3e)
- zdsp\_offset\_q7() : [basicmath.h](group__math__dsp__basic__offset.md#ga701b8bbd1437e0f19807c38fd4d0e7e9)
- zdsp\_or\_u16() : [basicmath.h](group__math__dsp__basic__or.md#ga979e50ef34a5e5c8dc28f1cfc5ef708a)
- zdsp\_or\_u32() : [basicmath.h](group__math__dsp__basic__or.md#gaa218930efe8ab83663eb00b4f6f170bc)
- zdsp\_or\_u8() : [basicmath.h](group__math__dsp__basic__or.md#gabf9687bce70f19c4192b2ddba7b0d2da)
- zdsp\_scale\_f16() : [basicmath\_f16.h](group__math__dsp__basic__scale.md#ga26c461531e82511c18902ba908f36230)
- zdsp\_scale\_f32() : [basicmath.h](group__math__dsp__basic__scale.md#ga3a07935285b763bb9e9106db42292466)
- zdsp\_scale\_q15() : [basicmath.h](group__math__dsp__basic__scale.md#ga95e03e993542ff1710c771a9dc0eb01b)
- zdsp\_scale\_q31() : [basicmath.h](group__math__dsp__basic__scale.md#ga63eaab2b1ef431e4bceb90b0a701c879)
- zdsp\_scale\_q7() : [basicmath.h](group__math__dsp__basic__scale.md#ga2158a3f20bd5af0516f5b3af824c32e1)
- zdsp\_shift\_q15() : [basicmath.h](group__math__dsp__basic__shift.md#ga738fc0fe86b9c910a30fceff7dc4a789)
- zdsp\_shift\_q31() : [basicmath.h](group__math__dsp__basic__shift.md#gaf9af89a3c76ad385eec0225185b522c9)
- zdsp\_shift\_q7() : [basicmath.h](group__math__dsp__basic__shift.md#ga8eb72ff139c173d3e1794a1d1c1c8fde)
- zdsp\_sub\_f16() : [basicmath\_f16.h](group__math__dsp__basic__sub.md#ga500f6403d4382bc797231d7962275230)
- zdsp\_sub\_f32() : [basicmath.h](group__math__dsp__basic__sub.md#gafc66edd5888b19174cb24c2ea858d24d)
- zdsp\_sub\_q15() : [basicmath.h](group__math__dsp__basic__sub.md#gab9698353b69654eefbd76ff6f723a4f3)
- zdsp\_sub\_q31() : [basicmath.h](group__math__dsp__basic__sub.md#ga693b9677fdf54694e49e03a9b629b35d)
- zdsp\_sub\_q7() : [basicmath.h](group__math__dsp__basic__sub.md#ga4eb67772a48933a9f24a68f73228adbf)
- zdsp\_xor\_u16() : [basicmath.h](group__math__dsp__basic__xor.md#gaa4d486a9a9022120e86e6e5d62940444)
- zdsp\_xor\_u32() : [basicmath.h](group__math__dsp__basic__xor.md#gac4dd8fed6e7485a0e989fb37b3fe0c77)
- zdsp\_xor\_u8() : [basicmath.h](group__math__dsp__basic__xor.md#ga4f5a442ce2ce79a6d09fde4648ceb100)
- zephyr\_fputc() : [libc-hooks.h](libc-hooks_8h.md#ac5b3b7e59825b80ba65bb6346ee88e3c)
- zero\_actlr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a9d0a4c92976b7169af4d8632cf76a908)
- zero\_actlr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a544291a0aed0b6fd63cbc10ca511dd4e)
- zero\_actlr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#ad4cbd8cea7f279d4556d18a5a0de035f)
- zero\_ccsidr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a14cde62648f289f4e330653282068948)
- zero\_clidr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a5738a6628093de5b477a1fd686d1bad6)
- zero\_cntfrq\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#a83d8fbdb70b99aee5ab70df31ba63333)
- zero\_cnthctl\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#adc8984d71461fe51910e00372b53f5a8)
- zero\_cnthp\_ctl\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a448135ab8d154c27e5021e1bef0e9c1e)
- zero\_cnthps\_ctl\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#acea9c5d416e6fe66c38fcc718022782c)
- zero\_cntv\_ctl\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#aa8aa05240d19d14d5e70a99de4fb67f5)
- zero\_cntv\_cval\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#a412856bdac39d9eed4b6ee9b317293da)
- zero\_cntvct\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#a9cc0a9484766d3309a44e0ea12ef4b72)
- zero\_cntvoff\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a7291a4b003a0a0b51d5adefc8f6c5dca)
- zero\_cpacr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#afdab5fb96d87973187821af88ef6614a)
- zero\_cpacr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a3d227735ad0ce38beba2a7b38f64a53e)
- zero\_cpacr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#aba83d3adaa1a6f1ee0d7d16e85693164)
- zero\_cptr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#af92cb1be4eabd19500705f4edad0e633)
- zero\_cptr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#afe907102e849035a4e7a6cbb45cb82cf)
- zero\_cptr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#ab69b4a9149bda5f3749841dbd8565153)
- zero\_csselr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#acad4e29b5acfc5dd6de664e628b6ff0b)
- zero\_currentel() : [lib\_helpers.h](4_2lib__helpers_8h.md#a0335454d266fe275bbfc1fb369dc180c)
- zero\_daif() : [lib\_helpers.h](4_2lib__helpers_8h.md#a5c120f01dfacb589426c63149bbfdd59)
- zero\_elr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#aba615d905fb7dce97b21f2d3945160da)
- zero\_elr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#ad58df1b3866b2c56303367da1e0306a8)
- zero\_elr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a7ddbe89d4f6dca3149b241ad63fd17a7)
- zero\_esr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#ad567d2f1d4318e0ad33769bf57d4728a)
- zero\_esr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a04965615eb6b62d5db385ecf5eb7ca5e)
- zero\_esr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#aaa751dce577da4b34856a02ae07f70ce)
- zero\_far\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a80db586ae600d6b16c3bdeaa9a0bead5)
- zero\_far\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a4373a039fcb45de9ed994899ca3ea5fd)
- zero\_far\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#add7899adce220589e834f1c96085a080)
- zero\_hcr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a57ad54df026a7de567ea5f38518635e8)
- zero\_id\_aa64mmfr0\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a501b8e19a696c397e6c19d1ef39f8010)
- zero\_id\_aa64pfr0\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a20de9972f3531bbfc5efdd18bc16ae66)
- zero\_mair\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a877cf34c4e464127d5d0f973c74e3bd2)
- zero\_mair\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#aef3c4bbd1bc5d0e35bcf237d91aff4bf)
- zero\_mair\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a55841460807ef7be743a01bd5fe79a85)
- zero\_mpidr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a03fe05f9ce93c82be71057851d57833f)
- zero\_par\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a0f9320e47d0b6e20fd894ecad7b486ae)
- zero\_scr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a6434e5b4d4406b1c7f946909e9192488)
- zero\_sctlr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#af22552720c6ce81f89e5723fe477b828)
- zero\_sctlr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a2a189bbf13c45fa8005fa7dc402e9f9f)
- zero\_sctlr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a75ea7c1920c095ed1ea51427d3b9f691)
- zero\_sp\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#aeede39e9c92abbeafe7226ce3e979b52)
- zero\_spsr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#ac7909e27205fd526b6dc921d88e0aea8)
- zero\_spsr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a6400f2fb4d0c473db6bce81e6bcd8d18)
- zero\_spsr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#aed0c4b734bb27fb8e439bdeee11b1a03)
- zero\_tcr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#acadfba11f4bef94472510ba611f451d7)
- zero\_tcr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#aa7dd303c9422ebfeacdecac6e3dae683)
- zero\_tcr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a0d6badd9b7e7349d96065fe766008912)
- zero\_tpidrro\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#a53ade2bfc6ec5e26f3ecd7fd75b3b277)
- zero\_ttbr0\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a818f887e590c29f38e9f4bf4cba3b058)
- zero\_ttbr0\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a764d074cdadfc74bb2f5d8cb8a3dcf3a)
- zero\_ttbr0\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#ac7a66025567c1c99bc6618760e054b96)
- zero\_vbar\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#af090c3b30e472a3bacf168b495d4e61d)
- zero\_vbar\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#ac4250db263683908b1b9390961d4a97b)
- zero\_vbar\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a061496958b38c81bfad70838d76f186b)
- zero\_vmpidr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#ab5800085de000d3b0f0f0b1e09cacfe1)
- zperf\_tcp\_download() : [zperf.h](group__zperf.md#ga9ac136e27fc87f85ddb66cbd2f78256d)
- zperf\_tcp\_download\_stop() : [zperf.h](group__zperf.md#gac29193fb02ccb159b7adc3c8de64895a)
- zperf\_tcp\_upload() : [zperf.h](group__zperf.md#ga24c061ea0dcd44b94c2ad79dfa264e44)
- zperf\_tcp\_upload\_async() : [zperf.h](group__zperf.md#ga07704e0bd701c0f2da2b74b9a83d6b35)
- zperf\_udp\_download() : [zperf.h](group__zperf.md#gaae9e5669a76da0cde7454bbd7b491a4a)
- zperf\_udp\_download\_stop() : [zperf.h](group__zperf.md#ga394e3a10550cf9d0a435f5d217dfbbdf)
- zperf\_udp\_upload() : [zperf.h](group__zperf.md#ga6f2704914a9a577dac119a11f98c0e8e)
- zperf\_udp\_upload\_async() : [zperf.h](group__zperf.md#gacf57dcebd09cae8ecf61b553baf6b2cd)
- zsock\_accept() : [socket.h](group__bsd__sockets.md#ga25c993772f26b872e7ed16c4ae2349fb)
- zsock\_bind() : [socket.h](group__bsd__sockets.md#ga3d3258fc59ab566eab03e0f51da1556a)
- zsock\_close() : [socket.h](group__bsd__sockets.md#gae60d7ca486955dd79a2821d1f646c349)
- zsock\_connect() : [socket.h](group__bsd__sockets.md#ga1a70b1d3616341a86977835cc853d81d)
- zsock\_fcntl() : [socket.h](group__bsd__sockets.md#ga13471854ca4279a157fe43ec030ea34d)
- ZSOCK\_FD\_CLR() : [socket\_select.h](group__bsd__sockets.md#gadcc17ac3947722e684a543e055b8c1e5)
- ZSOCK\_FD\_ISSET() : [socket\_select.h](group__bsd__sockets.md#ga24808b7adec4970eb0981b24e9313aab)
- ZSOCK\_FD\_SET() : [socket\_select.h](group__bsd__sockets.md#ga9a6044b408c0ef80336e957cd47d5f25)
- ZSOCK\_FD\_ZERO() : [socket\_select.h](group__bsd__sockets.md#gae9c3555c2fc74b8a88ea5909a2d02afb)
- zsock\_freeaddrinfo() : [socket.h](group__bsd__sockets.md#ga7953da2e52bcfad51b877de6d7fd6cc9)
- zsock\_gai\_strerror() : [socket.h](group__bsd__sockets.md#gaa9d9e97c347b3854dc73d7ba33d8ca4b)
- zsock\_getaddrinfo() : [socket.h](group__bsd__sockets.md#gaf59c97c9bd07f188e3f06b2372ac1856)
- zsock\_gethostname() : [socket.h](group__bsd__sockets.md#ga8b348d886f1bc4f4cdf6e2260844f6e1)
- zsock\_getnameinfo() : [socket.h](group__bsd__sockets.md#gae9375bc6a1e945e5486f40c0198e3505)
- zsock\_getpeername() : [socket.h](group__bsd__sockets.md#ga0564ad1c0fb53d4fc74619ca54bf28f2)
- zsock\_getsockname() : [socket.h](group__bsd__sockets.md#gaa0270d771e51dbf2a91bea5b24bf26c1)
- zsock\_getsockopt() : [socket.h](group__bsd__sockets.md#ga56cb8d34d4b9599c3d2965c97da80a30)
- zsock\_inet\_ntop() : [socket.h](group__bsd__sockets.md#gae3092504b98d3b5f28675081a1e5b1ab)
- zsock\_inet\_pton() : [socket.h](group__bsd__sockets.md#gae4cf68b3752057b4b0818394487a2dbb)
- zsock\_ioctl() : [socket.h](group__bsd__sockets.md#gac1c236bd929110eb4fa31c34fa6bf21a)
- zsock\_listen() : [socket.h](group__bsd__sockets.md#gae8ea59ea82063aa28a9b72da2f08c9fd)
- zsock\_poll() : [socket.h](group__bsd__sockets.md#gaa946975d9892a0ad730b6bf7090267cf)
- zsock\_recv() : [socket.h](group__bsd__sockets.md#ga8a7d82cfb02a45de59ccd05614eb78d6)
- zsock\_recvfrom() : [socket.h](group__bsd__sockets.md#gaca71732c883880c6fdcc7eb8e1c28932)
- zsock\_recvmsg() : [socket.h](group__bsd__sockets.md#gac8d659bad72d651265c8cd0b69e678c0)
- zsock\_select() : [socket\_select.h](group__bsd__sockets.md#ga265b8fc197a7a79102bdce4875bbb045)
- zsock\_send() : [socket.h](group__bsd__sockets.md#ga2d8c2173986f67dde6dc5721bf690855)
- zsock\_sendmsg() : [socket.h](group__bsd__sockets.md#gadb708a068afed401e1354aac885c787e)
- zsock\_sendto() : [socket.h](group__bsd__sockets.md#ga17a68983c5fc16cef968b3e7cecff089)
- zsock\_setsockopt() : [socket.h](group__bsd__sockets.md#gad123f59d8c86bf187054c80ff743b4eb)
- zsock\_shutdown() : [socket.h](group__bsd__sockets.md#gac56432bf901efaf8ef782430ac143f03)
- zsock\_socket() : [socket.h](group__bsd__sockets.md#ga5693d19a0bdff45a5cb09227683d8631)
- zsock\_socketpair() : [socket.h](group__bsd__sockets.md#ga1f5e089c9fb39d3a8884502a11e389b3)
- ztest\_relative\_filename() : [ztest\_assert.h](ztest__assert_8h.md#a06a081e3d716be7e024973cbf305c14b)
- ztest\_run\_all() : [ztest\_test.h](ztest__test_8h.md#ac6b1f8b820cd682094b7aaeebdaa106e)
- ztest\_run\_test\_suites() : [ztest\_test.h](ztest__test_8h.md#aafb3cba3a9637839952b2db2486ab88c)
- ztest\_simple\_1cpu\_after() : [ztest\_test.h](group__ztest__test.md#gaa53486873430dd8fa978745d8a1d0686)
- ztest\_simple\_1cpu\_before() : [ztest\_test.h](group__ztest__test.md#gac7ddc33b5a0d11e2ffa0a564019c5e3d)
- ztest\_skip\_failed\_assumption() : [ztest\_assert.h](ztest__assert_8h.md#a17537c79021fbc12e56b72ccec4b99c5), [ztest\_test.h](group__ztest__test.md#ga17537c79021fbc12e56b72ccec4b99c5)
- ztest\_test\_expect\_fail() : [ztest\_assert.h](ztest__assert_8h.md#a5c6bb493c88f7426a827889526dc0772)
- ztest\_test\_fail() : [ztest\_assert.h](ztest__assert_8h.md#acd6eb423f54dce8544f7c3b1618c0374), [ztest\_test.h](group__ztest__test.md#gacd6eb423f54dce8544f7c3b1618c0374)
- ztest\_test\_pass() : [ztest\_test.h](group__ztest__test.md#ga085d30a04102ebb8c3f2206020723ee0)
- ztest\_test\_skip() : [ztest\_assert.h](ztest__assert_8h.md#ada3b1fcfa71db1bf7787c03ff45256d5), [ztest\_test.h](group__ztest__test.md#gada3b1fcfa71db1bf7787c03ff45256d5)
- ztest\_verify\_all\_test\_suites\_ran() : [ztest\_test.h](ztest__test_8h.md#a349fda278dff713debfd2a3b94b8b1eb)
- ztress\_abort() : [ztress.h](group__ztest__ztress.md#ga57f171e230fba462b3dea6b2d3cf71f6)
- ztress\_exec\_count() : [ztress.h](group__ztest__ztress.md#ga99eeabcc672fc5ec0b83ce5b8fb4ec5b)
- ztress\_execute() : [ztress.h](group__ztest__ztress.md#gaf706f1af4c42f5925d7545dadf5548fd)
- ztress\_optimized\_ticks() : [ztress.h](group__ztest__ztress.md#gacbbdb8e7bad532d6dd20c486b3256e21)
- ztress\_preempt\_count() : [ztress.h](group__ztest__ztress.md#ga4406b828d170bc19065aaf65aeb4613e)
- ztress\_report() : [ztress.h](group__ztest__ztress.md#gaf4db2092eee17d863c9810333ba4c870)
- ztress\_set\_timeout() : [ztress.h](group__ztest__ztress.md#ga5b3069bb2aa35ddc64c46c18d2e30091)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
